--- a/po/es/comas.po
+++ b/po/es/comas.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: comas 1.0\n"
-"POT-Creation-Date: 2008-07-01 12:53-0500\n"
-"PO-Revision-Date: 2008-07-01 12:05-0600\n"
+"POT-Creation-Date: 2008-07-02 12:24-0500\n"
+"PO-Revision-Date: 2008-07-02 12:23-0600\n"
 "Last-Translator: Gunnar Wolf <gwolf@gwolf.org>\n"
 "Language-Team: Gunnar Wolf <gwolf@gwolf.org>\n"
 "MIME-Version: 1.0\n"
@@ -548,6 +548,30 @@ msgstr "El asistente especificado fue eliminado exitosamente"
 msgid "Error removing requested attendee: "
 msgstr "Error eliminando al asistente solicitado:"
 
+#: app/controllers/sys_conf_adm_controller.rb:3
+msgid "Show configuration"
+msgstr "Mostrar la configuración"
+
+#: app/controllers/sys_conf_adm_controller.rb:14
+msgid "Error destroying requested entry: "
+msgstr "Error eliminando la llave de configuración indicado:"
+
+#: app/controllers/sys_conf_adm_controller.rb:22
+msgid "Error creating requested entry: "
+msgstr "Error creando la entrada de configuración solicitada:"
+
+#: app/controllers/sys_conf_adm_controller.rb:34
+msgid "The configuration entry was successfully updated"
+msgstr "La entrada de configuración fue actualizada exitosamente"
+
+#: app/controllers/sys_conf_adm_controller.rb:36
+msgid "Error updating requested configuration entry: "
+msgstr "Error actualizando la entrada de configuración solicitada:"
+
+#: app/controllers/sys_conf_adm_controller.rb:46
+msgid "Invalid configuration entry %d requested"
+msgstr "Especificó una entrada de configuración inválida: %d"
+
 #: app/controllers/conferences_controller.rb:33
 msgid "You have successfully registered for conference \"%s\""
 msgstr "Fue registrado exitosamente para «%s»"
@@ -580,32 +604,32 @@ msgstr "su página de información"
 msgid "Invalid conference requested"
 msgstr "Especificó una actividad inexistente"
 
-#: app/helpers/application_helper.rb:30
+#: app/helpers/application_helper.rb:34
 msgid "No items found"
 msgstr "No hay registros que mostrar"
 
-#: app/helpers/application_helper.rb:31
+#: app/helpers/application_helper.rb:35
 msgid "Displaying <b>1</b> item"
 msgstr "Mostrando <b>1</b> registro"
 
-#: app/helpers/application_helper.rb:32
+#: app/helpers/application_helper.rb:36
 msgid "Displaying <b>all %d</b> items"
 msgstr "Mostrando <b>todos los %d</b> registros"
 
-#: app/helpers/application_helper.rb:35
+#: app/helpers/application_helper.rb:39
 msgid "Displaying items <b>%d&nbsp;-&nbsp;%d</b> of <b>%d</b> in total"
 msgstr ""
 "Mostrando los registros <b>%d&nbsp;-&nbsp;%d</b> de un total de <b>%d</b>"
 
-#: app/helpers/application_helper.rb:81
+#: app/helpers/application_helper.rb:85
 msgid "Field %s not defined for %s"
 msgstr "El campo %s no está definido para %s"
 
-#: app/helpers/application_helper.rb:115
+#: app/helpers/application_helper.rb:119
 msgid "Yes"
 msgstr "Sí"
 
-#: app/helpers/application_helper.rb:115
+#: app/helpers/application_helper.rb:119
 msgid "No"
 msgstr "No"
 
@@ -640,6 +664,7 @@ msgstr "Registrarme"
 
 #: app/helpers/conferences_adm_helper.rb:23 app/views/people_adm/list.rhtml:19
 #: app/views/conferences_adm/list.rhtml:34
+#: app/views/sys_conf_adm/list.rhtml:14
 msgid "Delete"
 msgstr "Eliminar"
 
@@ -721,6 +746,7 @@ msgid "Attendee %d's personal data"
 msgstr "Datos personales del asistente %d"
 
 #: app/views/people_adm/show.rhtml:3 app/views/conferences_adm/show.rhtml:3
+#: app/views/sys_conf_adm/edit.rhtml:9
 msgid "Save changes"
 msgstr "Grabar cambios"
 
@@ -761,7 +787,7 @@ msgid "Register a new attendee"
 msgstr "Registrar a un nuevo asistente"
 
 #: app/views/people_adm/new.rhtml:3 app/views/conferences_adm/new.rhtml:3
-#: app/views/people/new.rhtml:10
+#: app/views/people/new.rhtml:10 app/views/sys_conf_adm/list.rhtml:26
 msgid "Create"
 msgstr "Crear"
 
@@ -902,6 +928,54 @@ msgstr "Registrar una nueva cuenta"
 #: app/views/conferences/list.rhtml:14
 msgid "log in to your account"
 msgstr "entre a su cuenta"
+
+#: app/views/sys_conf_adm/edit.rhtml:1
+msgid "Editing configuration entry <em>%s</em>"
+msgstr "Editando la entrada de configuración <em>%s</em>"
+
+#: app/views/sys_conf_adm/edit.rhtml:2
+msgid ""
+"<b>Caution</b>: Modifying this configuration entry might render your system "
+"inoperable. Proceed at your own risk, and only if you know what you are "
+"doing."
+msgstr ""
+"<b>Precaución</b>: Modificar esta entrada de configuración puede dejar a su "
+"sistema inutilizable. Hágalo bajo su propio riesgo, y únicamente si sabe lo "
+"que hace."
+
+#: app/views/sys_conf_adm/list.rhtml:1
+msgid "Configuration entries"
+msgstr "Entradas de configuración"
+
+#: app/views/sys_conf_adm/list.rhtml:2
+msgid ""
+"<b>Caution</b>: Modifying the configuration entries shown here might render "
+"your system inoperable. Proceed at your own risk, and only if you know what "
+"you are doing."
+msgstr ""
+"<b>Precaución</b>: Modificar las entradas de configuración desplegadas a "
+"continuación puede dejar a su sistema inutilizable. Hágalo bajo su propio "
+"riesgo, y únicamente si sabe lo que hace."
+
+#: app/views/sys_conf_adm/list.rhtml:7
+msgid "Key"
+msgstr "Llave"
+
+#: app/views/sys_conf_adm/list.rhtml:7
+msgid "Description"
+msgstr "Descripción"
+
+#: app/views/sys_conf_adm/list.rhtml:7
+msgid "Value"
+msgstr "Valor"
+
+#: app/views/sys_conf_adm/list.rhtml:13
+msgid "Edit"
+msgstr "Editar"
+
+#: app/views/sys_conf_adm/list.rhtml:16
+msgid "Are you sure you want to delete this configuration entry?"
+msgstr "¿Está seguro de que desea eliminar esta llave de configuración?"
 
 #: app/views/layouts/application.rhtml:58
 msgid "Log out"
