--- a/po/en/comas.po
+++ b/po/en/comas.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: comas 1.0\n"
-"POT-Creation-Date: 2008-09-12 18:39-0500\n"
+"POT-Creation-Date: 2008-09-23 13:54-0500\n"
 "PO-Revision-Date: 2008-09-12 18:39-0600\n"
 "Last-Translator: Gunnar Wolf <gwolf@gwolf.org>\n"
 "Language-Team: \n"
@@ -91,6 +91,18 @@ msgid "Not a relation field"
 msgstr ""
 
 #: app/models/person.rb:-
+msgid "admin task"
+msgstr ""
+
+#: app/models/person.rb:-
+msgid "AdminTask|Name"
+msgstr "Name"
+
+#: app/models/person.rb:-
+msgid "AdminTask|Sys name"
+msgstr "System name"
+
+#: app/models/person.rb:-
 msgid "person"
 msgstr ""
 
@@ -125,18 +137,6 @@ msgstr "Created at"
 #: app/models/person.rb:-
 msgid "Person|Last login at"
 msgstr "Last login at"
-
-#: app/models/person.rb:-
-msgid "admin task"
-msgstr ""
-
-#: app/models/person.rb:-
-msgid "AdminTask|Name"
-msgstr "Name"
-
-#: app/models/person.rb:-
-msgid "AdminTask|Sys name"
-msgstr "System name"
 
 #: app/models/conference.rb:-
 msgid "conference"
@@ -178,8 +178,7 @@ msgstr "Conference begins at"
 msgid "Conference|Finishes"
 msgstr "Conference finishes at"
 
-#: app/models/conference.rb:106
-#: app/models/conference.rb:107
+#: app/models/conference.rb:106 app/models/conference.rb:107
 msgid "%{fn} can't be blank"
 msgstr ""
 
@@ -408,7 +407,8 @@ msgid "Call for papers period for this conference is not current"
 msgstr ""
 
 #: app/models/proposal.rb:53
-msgid "An already submitted proposal can not be moved to a different conference"
+msgid ""
+"An already submitted proposal can not be moved to a different conference"
 msgstr ""
 
 #: app/models/participation_type.rb:-
@@ -443,28 +443,23 @@ msgstr ""
 msgid "Conference listing"
 msgstr ""
 
-#: app/controllers/application.rb:68
-#: app/views/people/login.html.erb:6
+#: app/controllers/application.rb:68 app/views/people/login.html.erb:6
 msgid "Log in"
 msgstr ""
 
-#: app/controllers/application.rb:70
-#: app/views/people/new.html.erb:1
+#: app/controllers/application.rb:70 app/views/people/new.html.erb:1
 msgid "New account"
 msgstr ""
 
-#: app/controllers/application.rb:74
-#: app/views/people/personal.html.erb:1
+#: app/controllers/application.rb:74 app/views/people/personal.html.erb:1
 msgid "Personal information"
 msgstr ""
 
-#: app/controllers/application.rb:76
-#: app/views/people/password.html.erb:24
+#: app/controllers/application.rb:76 app/views/people/password.html.erb:24
 msgid "Change password"
 msgstr ""
 
-#: app/controllers/application.rb:79
-#: app/views/people/proposals.html.erb:1
+#: app/controllers/application.rb:79 app/views/people/proposals.html.erb:1
 msgid "My proposals"
 msgstr ""
 
@@ -507,8 +502,7 @@ msgid "Error removing requested conference: "
 msgstr ""
 
 #: app/controllers/conferences_adm_controller.rb:51
-#: app/controllers/admin.rb:12
-#: app/controllers/people_adm_controller.rb:53
+#: app/controllers/admin.rb:12 app/controllers/people_adm_controller.rb:53
 msgid "Invocation error"
 msgstr ""
 
@@ -525,11 +519,15 @@ msgid "The requested timeslot was successfully deleted"
 msgstr ""
 
 #: app/controllers/conferences_adm_controller.rb:96
-msgid "Could not find requested timeslot (%d) for deletion - Maybe it was already deleted?"
+msgid ""
+"Could not find requested timeslot (%d) for deletion - Maybe it was already "
+"deleted?"
 msgstr ""
 
 #: app/controllers/proposals_controller.rb:10
-msgid "There are currently no conferences for which you can submit proposals. Please register first."
+msgid ""
+"There are currently no conferences for which you can submit proposals. "
+"Please register first."
 msgstr ""
 
 #: app/controllers/proposals_controller.rb:34
@@ -549,7 +547,9 @@ msgid "Error updating the proposal: "
 msgstr ""
 
 #: app/controllers/proposals_controller.rb:90
-msgid "Requested author does not exist or is not listed in this proposal. Maybe you already deleted him?"
+msgid ""
+"Requested author does not exist or is not listed in this proposal. Maybe you "
+"already deleted him?"
 msgstr ""
 
 #: app/controllers/proposals_controller.rb:96
@@ -557,7 +557,9 @@ msgid "Requested author was successfully removed"
 msgstr ""
 
 #: app/controllers/proposals_controller.rb:98
-msgid "Unexpected error removing requested author. Please try again, or contact system administrator"
+msgid ""
+"Unexpected error removing requested author. Please try again, or contact "
+"system administrator"
 msgstr ""
 
 #: app/controllers/proposals_controller.rb:108
@@ -589,7 +591,9 @@ msgid "The document was successfully deleted"
 msgstr ""
 
 #: app/controllers/proposals_controller.rb:175
-msgid "Error removing requested document. Please try again later, or contact the system administrator."
+msgid ""
+"Error removing requested document. Please try again later, or contact the "
+"system administrator."
 msgstr ""
 
 #: app/controllers/proposals_controller.rb:190
@@ -609,15 +613,20 @@ msgid "Incorrect user/password"
 msgstr ""
 
 #: app/controllers/people_controller.rb:40
-msgid "An email has been sent to you, with instructions on how to enter the system and change your password."
+msgid ""
+"An email has been sent to you, with instructions on how to enter the system "
+"and change your password."
 msgstr ""
 
 #: app/controllers/people_controller.rb:43
-msgid "Nobody was found with the specified login or E-mail address. Please make sure it was correctly specified. Keep in mind this system is case-sensitive."
+msgid ""
+"Nobody was found with the specified login or E-mail address. Please make "
+"sure it was correctly specified. Keep in mind this system is case-sensitive."
 msgstr ""
 
 #: app/controllers/people_controller.rb:56
-msgid "Incorrect session specified - Remember session URLs can be used only once"
+msgid ""
+"Incorrect session specified - Remember session URLs can be used only once"
 msgstr ""
 
 #: app/controllers/people_controller.rb:63
@@ -625,7 +634,9 @@ msgid "Invalid attempt to change password"
 msgstr ""
 
 #: app/controllers/people_controller.rb:69
-msgid "Timeout waiting for your new password - You can request for a new password recovery if needed."
+msgid ""
+"Timeout waiting for your new password - You can request for a new password "
+"recovery if needed."
 msgstr ""
 
 #: app/controllers/people_controller.rb:77
@@ -684,11 +695,13 @@ msgid "Requested person (%d) does not exist"
 msgstr ""
 
 #: app/controllers/attendance_adm_controller.rb:59
-msgid "<em>%s</em> is not registered for <em>%s</em>, and registrations are closed."
+msgid ""
+"<em>%s</em> is not registered for <em>%s</em>, and registrations are closed."
 msgstr ""
 
 #: app/controllers/attendance_adm_controller.rb:65
-msgid "Person <em>%s</em> was not yet registered for this conference - Registering."
+msgid ""
+"Person <em>%s</em> was not yet registered for this conference - Registering."
 msgstr ""
 
 #: app/controllers/attendance_adm_controller.rb:71
@@ -764,7 +777,9 @@ msgid "Could not register you for conference %s: %s"
 msgstr ""
 
 #: app/controllers/conferences_controller.rb:59
-msgid "You have %d proposals registered for this conference. Please withdraw them before unregistering."
+msgid ""
+"You have %d proposals registered for this conference. Please withdraw them "
+"before unregistering."
 msgstr ""
 
 #: app/controllers/conferences_controller.rb:66
@@ -776,7 +791,9 @@ msgid "Could not unregister you from conference %s: %s"
 msgstr ""
 
 #: app/controllers/conferences_controller.rb:81
-msgid "This conference does not currently accept changing your registration status - please visit %s for more details"
+msgid ""
+"This conference does not currently accept changing your registration status "
+"- please visit %s for more details"
 msgstr ""
 
 #: app/controllers/conferences_controller.rb:84
@@ -799,8 +816,7 @@ msgstr ""
 msgid "Down"
 msgstr ""
 
-#: app/helpers/application_helper.rb:32
-#: app/helpers/application_helper.rb:36
+#: app/helpers/application_helper.rb:32 app/helpers/application_helper.rb:36
 msgid "-"
 msgstr ""
 
@@ -856,8 +872,7 @@ msgstr ""
 msgid "Unregister"
 msgstr ""
 
-#: app/helpers/conferences_helper.rb:46
-#: app/views/conferences/show.html.erb:21
+#: app/helpers/conferences_helper.rb:46 app/views/conferences/show.html.erb:21
 msgid "Confirm: Do you want to unregister from \"%s\"? "
 msgstr ""
 
@@ -874,7 +889,9 @@ msgid "Delete"
 msgstr ""
 
 #: app/helpers/conferences_adm_helper.rb:26
-msgid "Are you sure you want to permanently delete this timeslot? This will also destroy any attendances it has recorded"
+msgid ""
+"Are you sure you want to permanently delete this timeslot? This will also "
+"destroy any attendances it has recorded"
 msgstr ""
 
 #: app/helpers/attendance_adm_helper.rb:18
@@ -925,7 +942,10 @@ msgid "Are you sure you want to delete author\"%s\" from proposal \"%s\"? "
 msgstr ""
 
 #: app/helpers/proposals_helper.rb:37
-msgid "Removing the only registered author for this proposal will also remove the proposal from the system. This action cannot be undone. Are you sure you want to continue?"
+msgid ""
+"Removing the only registered author for this proposal will also remove the "
+"proposal from the system. This action cannot be undone. Are you sure you "
+"want to continue?"
 msgstr ""
 
 #: app/helpers/proposals_helper.rb:74
@@ -974,14 +994,17 @@ msgstr ""
 
 #: app/views/people_adm/show.html.erb:3
 #: app/views/conferences_adm/show.html.erb:3
-#: app/views/people/personal.html.erb:6
-#: app/views/proposals/edit.html.erb:7
+#: app/views/people/personal.html.erb:6 app/views/proposals/edit.html.erb:7
 #: app/views/sys_conf_adm/edit.html.erb:9
 msgid "Save changes"
 msgstr ""
 
 #: app/views/people_adm/by_task.html.erb:1
 msgid "Registered people with administrative tasks"
+msgstr ""
+
+#: app/views/people_adm/by_task.html.erb:6
+msgid "%d people"
 msgstr ""
 
 #: app/views/people_adm/new.html.erb:1
@@ -1120,7 +1143,9 @@ msgid "Create a new timeslot for this conference"
 msgstr ""
 
 #: app/views/conferences_adm/timeslots.html.erb:24
-msgid "Enter the tolerance in <em>hh:mm:ss</em> format. If not specified, it will use the system-wide default (%s)"
+msgid ""
+"Enter the tolerance in <em>hh:mm:ss</em> format. If not specified, it will "
+"use the system-wide default (%s)"
 msgstr ""
 
 #: app/views/conferences_adm/timeslots.html.erb:35
@@ -1187,8 +1212,7 @@ msgstr ""
 msgid "Request a new password"
 msgstr ""
 
-#: app/views/people/proposals.html.erb:4
-#: app/views/proposals/new.html.erb:1
+#: app/views/people/proposals.html.erb:4 app/views/proposals/new.html.erb:1
 msgid "Submit a new proposal"
 msgstr ""
 
@@ -1217,14 +1241,12 @@ msgstr ""
 msgid "Action"
 msgstr ""
 
-#: app/views/people/proposals.html.erb:27
-#: app/views/proposals/show.html.erb:3
+#: app/views/people/proposals.html.erb:27 app/views/proposals/show.html.erb:3
 #: app/views/sys_conf_adm/list.html.erb:13
 msgid "Edit"
 msgstr ""
 
-#: app/views/people/proposals.html.erb:29
-#: app/views/proposals/show.html.erb:16
+#: app/views/people/proposals.html.erb:29 app/views/proposals/show.html.erb:16
 msgid "Manage authors"
 msgstr ""
 
@@ -1240,13 +1262,11 @@ msgstr ""
 msgid "Current password"
 msgstr ""
 
-#: app/views/people/password.html.erb:11
-#: app/views/people/recover.html.erb:11
+#: app/views/people/password.html.erb:11 app/views/people/recover.html.erb:11
 msgid "New password"
 msgstr ""
 
-#: app/views/people/password.html.erb:17
-#: app/views/people/recover.html.erb:17
+#: app/views/people/password.html.erb:17 app/views/people/recover.html.erb:17
 msgid "Confirm new password"
 msgstr ""
 
@@ -1258,8 +1278,7 @@ msgstr ""
 msgid "Next conferences you are signed up for"
 msgstr ""
 
-#: app/views/people/account.html.erb:9
-#: app/views/conferences/list.html.erb:6
+#: app/views/people/account.html.erb:9 app/views/conferences/list.html.erb:6
 msgid "Upcoming conferences"
 msgstr "Upcoming conferences"
 
@@ -1272,7 +1291,10 @@ msgid "Create account"
 msgstr ""
 
 #: app/views/people/request_passwd.html.erb:6
-msgid "You lost or forgot your password? Don't worry, it can happen to anybody! Please enter the login or E-mail address with which you registered, and we will send you a mail  with all the needed information."
+msgid ""
+"You lost or forgot your password? Don't worry, it can happen to anybody! "
+"Please enter the login or E-mail address with which you registered, and we "
+"will send you a mail  with all the needed information."
 msgstr ""
 
 #: app/views/people/request_passwd.html.erb:17
@@ -1284,11 +1306,15 @@ msgid "Specify a new password"
 msgstr ""
 
 #: app/views/people/recover.html.erb:2
-msgid "You have just logged in using a one-time only URL. Please, set a new password for your account."
+msgid ""
+"You have just logged in using a one-time only URL. Please, set a new "
+"password for your account."
 msgstr ""
 
 #: app/views/people/recover.html.erb:4
-msgid "Please note you have only ten minutes to fill this form - If you do not fill it in this time, you will have to %s."
+msgid ""
+"Please note you have only ten minutes to fill this form - If you do not fill "
+"it in this time, you will have to %s."
 msgstr ""
 
 #: app/views/people/recover.html.erb:6
@@ -1312,7 +1338,10 @@ msgid "Add an author to this proposal"
 msgstr ""
 
 #: app/views/proposals/authors.html.erb:9
-msgid "Please enter the new author's <em>login</em>. The login must be an exact match (i.e., performing searches on similar logins will not work). A mail will be sent to the new author notifying him of this operation."
+msgid ""
+"Please enter the new author's <em>login</em>. The login must be an exact "
+"match (i.e., performing searches on similar logins will not work). A mail "
+"will be sent to the new author notifying him of this operation."
 msgstr ""
 
 #: app/views/proposals/authors.html.erb:17
@@ -1333,7 +1362,8 @@ msgid "Proposal status"
 msgstr ""
 
 #: app/views/proposals/_form.html.erb:5
-msgid "In order to submit a proposal for a conference not listed below, please %s"
+msgid ""
+"In order to submit a proposal for a conference not listed below, please %s"
 msgstr ""
 
 #: app/views/proposals/_form.html.erb:7
@@ -1446,7 +1476,10 @@ msgid "Editing configuration entry <em>%s</em>"
 msgstr ""
 
 #: app/views/sys_conf_adm/edit.html.erb:2
-msgid "<b>Caution</b>: Modifying this configuration entry might render your system inoperable. Proceed at your own risk, and only if you know what you are doing."
+msgid ""
+"<b>Caution</b>: Modifying this configuration entry might render your system "
+"inoperable. Proceed at your own risk, and only if you know what you are "
+"doing."
 msgstr ""
 
 #: app/views/sys_conf_adm/list.html.erb:1
@@ -1454,7 +1487,10 @@ msgid "Configuration entries"
 msgstr ""
 
 #: app/views/sys_conf_adm/list.html.erb:2
-msgid "<b>Caution</b>: Modifying the configuration entries shown here might render your system inoperable. Proceed at your own risk, and only if you know what you are doing."
+msgid ""
+"<b>Caution</b>: Modifying the configuration entries shown here might render "
+"your system inoperable. Proceed at your own risk, and only if you know what "
+"you are doing."
 msgstr ""
 
 #: app/views/sys_conf_adm/list.html.erb:7
@@ -1572,4 +1608,3 @@ msgstr "Conferences"
 #: lib/menu_tree.rb:16
 msgid "Unexpected arguments received: "
 msgstr ""
-
