--- a/po/es/comas.po
+++ b/po/es/comas.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: comas 1.0\n"
-"POT-Creation-Date: 2008-09-23 13:54-0500\n"
-"PO-Revision-Date: 2008-09-23 13:54-0600\n"
+"POT-Creation-Date: 2008-09-29 12:57-0500\n"
+"PO-Revision-Date: 2008-09-29 12:57-0600\n"
 "Last-Translator: Gunnar Wolf <gwolf@gwolf.org>\n"
 "Language-Team: Gunnar Wolf <gwolf@gwolf.org>\n"
 "MIME-Version: 1.0\n"
@@ -733,29 +733,129 @@ msgstr "El asistente especificado fue eliminado exitosamente"
 msgid "Error removing requested attendee: "
 msgstr "Error eliminando al asistente solicitado:"
 
-#: app/controllers/sys_conf_adm_controller.rb:3
+#: app/controllers/sys_conf_adm_controller.rb:8
 msgid "Show configuration"
 msgstr "Mostrar la configuración"
 
-#: app/controllers/sys_conf_adm_controller.rb:14
+#: app/controllers/sys_conf_adm_controller.rb:9
+msgid "Manage fields for people"
+msgstr "Administrar los campos para las personas"
+
+#: app/controllers/sys_conf_adm_controller.rb:22
 msgid "Error destroying requested entry: "
 msgstr "Error eliminando la llave de configuración indicado:"
 
-#: app/controllers/sys_conf_adm_controller.rb:22
+#: app/controllers/sys_conf_adm_controller.rb:30
 msgid "Error creating requested entry: "
 msgstr "Error creando la entrada de configuración solicitada:"
 
-#: app/controllers/sys_conf_adm_controller.rb:34
+#: app/controllers/sys_conf_adm_controller.rb:42
 msgid "The configuration entry was successfully updated"
 msgstr "La entrada de configuración fue actualizada exitosamente"
 
-#: app/controllers/sys_conf_adm_controller.rb:36
+#: app/controllers/sys_conf_adm_controller.rb:44
 msgid "Error updating requested configuration entry: "
 msgstr "Error actualizando la entrada de configuración solicitada:"
 
-#: app/controllers/sys_conf_adm_controller.rb:46
+#: app/controllers/sys_conf_adm_controller.rb:70
+msgid "Invalid column name"
+msgstr "Nombre de columna inválido"
+
+#: app/controllers/sys_conf_adm_controller.rb:71
+msgid "A field by that name is already defined"
+msgstr "Ya existe un campo con ese nombre"
+
+#: app/controllers/sys_conf_adm_controller.rb:73
+msgid "Invalid data type specified"
+msgstr "Especificó un tipo de datos equivocado"
+
+#: app/controllers/sys_conf_adm_controller.rb:87
+msgid "Successfully created %s field in %s"
+msgstr "El campo %s fue creado exitosamente en %s"
+
+#: app/controllers/sys_conf_adm_controller.rb:91
+msgid "Unable to create requested column: %s"
+msgstr "Error creando la columna solicitada:"
+
+#: app/controllers/sys_conf_adm_controller.rb:102
+msgid "Attempting to remove invalid field: %s"
+msgstr "Intentando eliminar un campo inválido: %s"
+
+#: app/controllers/sys_conf_adm_controller.rb:108
+msgid "Successfully removed field %s"
+msgstr "El campo %s fue eliminado exitosamente"
+
+#: app/controllers/sys_conf_adm_controller.rb:110
+msgid "Error removing specified field: %s"
+msgstr "Error eliminando al campo solicitado:"
+
+#: app/controllers/sys_conf_adm_controller.rb:115
+msgid "Please note we have _not_ dropped the corresponding catalog for this column, <em>%s</em>, to avoid data loss. You can manually remove it."
+msgstr "Por favor recuerde que _no_ eliminamos el catálogo correspondiente a esta columna, <em>%s</em>, para evitar pérdidas de datos. Usted puede eliminarlo manualmente."
+
+#: app/controllers/sys_conf_adm_controller.rb:129
+msgid "Invalid field specified"
+msgstr "Especificó un campo inválido"
+
+#: app/controllers/sys_conf_adm_controller.rb:146
+msgid "Error setting the requested default value: %s"
+msgstr "Error marcando el valor por omisión solicitado: %s"
+
+#: app/controllers/sys_conf_adm_controller.rb:168
+msgid "Error setting the field as not null: %s"
+msgstr "Error marcando al campo como no nulo: %s"
+
+#: app/controllers/sys_conf_adm_controller.rb:173
+msgid "Cannot set field %s to reject null values: No default value "
+msgstr "Es imposible configurar el campo %s para que rechace los valores nulos: No tiene un valor por omisión especificado "
+
+#: app/controllers/sys_conf_adm_controller.rb:179
+msgid "The field's values were correctly updated"
+msgstr "Los valores del campo fueron actualizados correctamente"
+
+#: app/controllers/sys_conf_adm_controller.rb:187
 msgid "Invalid configuration entry %d requested"
 msgstr "Especificó una entrada de configuración inválida: %d"
+
+#: app/controllers/sys_conf_adm_controller.rb:202
+msgid "Invalid table requested"
+msgstr "Especificó una tabla inválida"
+
+#: app/controllers/sys_conf_adm_controller.rb:209
+msgid "Boolean"
+msgstr "Booleano"
+
+#: app/controllers/sys_conf_adm_controller.rb:210
+msgid "Date"
+msgstr "Fecha"
+
+#: app/controllers/sys_conf_adm_controller.rb:211
+msgid "Timestamp"
+msgstr "Hora y fecha"
+
+#: app/controllers/sys_conf_adm_controller.rb:212
+msgid "String"
+msgstr "Cadena"
+
+#: app/controllers/sys_conf_adm_controller.rb:213
+msgid "Text"
+msgstr "Texto"
+
+#: app/controllers/sys_conf_adm_controller.rb:214
+msgid "Integer"
+msgstr "Entero"
+
+#: app/controllers/sys_conf_adm_controller.rb:215
+msgid "Decimal"
+msgstr "Decimal"
+
+#: app/controllers/sys_conf_adm_controller.rb:216
+msgid "Float"
+msgstr "Flotante"
+
+#: app/controllers/sys_conf_adm_controller.rb:217
+msgid "Catalog"
+msgstr "Catálogo"
 
 #: app/controllers/conferences_controller.rb:43
 msgid "You have successfully registered for conference \"%s\""
@@ -827,10 +927,14 @@ msgid "Field %s not defined for %s"
 msgstr "El campo %s no está definido para %s"
 
 #: app/helpers/application_helper.rb:169
+#: app/helpers/sys_conf_adm_helper.rb:19
+#: app/views/sys_conf_adm/edit_table_field.html.erb:41
 msgid "Yes"
 msgstr "Sí"
 
 #: app/helpers/application_helper.rb:169
+#: app/helpers/sys_conf_adm_helper.rb:19
+#: app/views/sys_conf_adm/edit_table_field.html.erb:42
 msgid "No"
 msgstr "No"
 
@@ -869,6 +973,7 @@ msgid "Sign up"
 msgstr "Registrarme"
 
 #: app/helpers/conferences_adm_helper.rb:23
+#: app/helpers/sys_conf_adm_helper.rb:21
 #: app/views/people_adm/list.html.erb:19
 #: app/views/conferences_adm/list.html.erb:34
 #: app/views/sys_conf_adm/list.html.erb:14
@@ -878,6 +983,49 @@ msgstr "Eliminar"
 #: app/helpers/conferences_adm_helper.rb:26
 msgid "Are you sure you want to permanently delete this timeslot? This will also destroy any attendances it has recorded"
 msgstr "¿Está seguro que desea eliminar permanentemente esta sesión? Eso eliminará también todas las asistencias que ha registrado en ella"
+
+#: app/helpers/sys_conf_adm_helper.rb:10
+#: app/views/sys_conf_adm/list_table_fields.html.erb:26
+msgid "Field name"
+msgstr "Nombre del campo"
+
+#: app/helpers/sys_conf_adm_helper.rb:10
+#: app/views/sys_conf_adm/list_table_fields.html.erb:27
+msgid "Field type"
+msgstr "Tipo de campo"
+
+#: app/helpers/sys_conf_adm_helper.rb:11
+#: app/views/sys_conf_adm/edit_table_field.html.erb:30
+msgid "Null OK"
+msgstr "Acepta nulos"
+
+#: app/helpers/sys_conf_adm_helper.rb:11
+#: app/views/sys_conf_adm/list_table_fields.html.erb:28
+#: app/views/sys_conf_adm/edit_table_field.html.erb:17
+msgid "Default"
+msgstr "Por omisión"
+
+#: app/helpers/sys_conf_adm_helper.rb:11
+#: app/views/people/proposals.html.erb:17
+msgid "Action"
+msgstr "Acción"
+
+#: app/helpers/sys_conf_adm_helper.rb:25
+msgid ""
+"Removing this field from the table definition will cause ALL OF ITS DATA to be destroyed. \n"
+"This is an irreversible action.\n"
+"Are you sure?"
+msgstr ""
+"Eliminar este campo de la definición de la tabla causará que TODOS SUS DATOS sean destruídos.\n"
+"Esta es una acción irreversible.\n"
+"¿Está seguro?"
+
+#: app/helpers/sys_conf_adm_helper.rb:31
+#: app/views/people/proposals.html.erb:27
+#: app/views/proposals/show.html.erb:3
+#: app/views/sys_conf_adm/list.html.erb:13
+msgid "Edit"
+msgstr "Editar"
 
 #: app/helpers/attendance_adm_helper.rb:18
 #: app/views/conferences_adm/timeslots.html.erb:14
@@ -996,6 +1144,7 @@ msgstr "Registrar a un nuevo asistente"
 
 #: app/views/people_adm/new.html.erb:3
 #: app/views/conferences_adm/new.html.erb:3
+#: app/views/sys_conf_adm/list_table_fields.html.erb:35
 #: app/views/sys_conf_adm/list.html.erb:26
 msgid "Create"
 msgstr "Crear"
@@ -1275,16 +1424,6 @@ msgstr "Título"
 msgid "Proposal type"
 msgstr "Tipo de propuesta"
 
-#: app/views/people/proposals.html.erb:17
-msgid "Action"
-msgstr "Acción"
-
-#: app/views/people/proposals.html.erb:27
-#: app/views/proposals/show.html.erb:3
-#: app/views/sys_conf_adm/list.html.erb:13
-msgid "Edit"
-msgstr "Editar"
-
 #: app/views/people/proposals.html.erb:29
 #: app/views/proposals/show.html.erb:16
 msgid "Manage authors"
@@ -1502,6 +1641,62 @@ msgstr "Registrar una nueva cuenta"
 #: app/views/conferences/list.html.erb:14
 msgid "log in to your account"
 msgstr "entre a su cuenta"
+
+#: app/views/sys_conf_adm/list_table_fields.html.erb:1
+msgid "Manage fields for table <em>%s</em>"
+msgstr "Administrar los campos para la tabla <em>%s</em>"
+
+#: app/views/sys_conf_adm/list_table_fields.html.erb:3
+msgid "This interface is provided as a general facility - However, redefining your tables' configuration, handling DBMS-based validations and default values will often require doing so directly interacting directly with your database system."
+msgstr "Esta interfaz es provista como una ayuda general - Sin embargo, para redefinir la configuración de sus tablas, manipular las validaciones especificadas por su motor de base de datos y especificar los valores por omisión, seguramente requerirá en algún momento manipular directamente su base de datos."
+
+#: app/views/sys_conf_adm/list_table_fields.html.erb:9
+msgid "Core attributes"
+msgstr "Atributos base"
+
+#: app/views/sys_conf_adm/list_table_fields.html.erb:10
+msgid "The following fields are <em>core</em> - That means, they will always be part of a person's definition:"
+msgstr "Los siguientes campos son <em>base</em> - Esto significa que siempre serán parte de la definición de una persona:"
+
+#: app/views/sys_conf_adm/list_table_fields.html.erb:14
+msgid "Extra attributes"
+msgstr "Atributos extra"
+
+#: app/views/sys_conf_adm/list_table_fields.html.erb:16
+msgid "No extra fields are currently defined"
+msgstr "No se han definido atributos extra"
+
+#: app/views/sys_conf_adm/list_table_fields.html.erb:21
+msgid "Add a new attribute"
+msgstr "Añadir un nuevo atributo"
+
+#: app/views/sys_conf_adm/edit_table_field.html.erb:1
+msgid "Edit field %s on %s"
+msgstr "Editar el campo %s en %s"
+
+#: app/views/sys_conf_adm/edit_table_field.html.erb:3
+msgid "The values set in this screen are very database-dependent. We strongly suggest working with a PostgreSQL RDBMS - Any other system is not guaranteed to work with the values selected here."
+msgstr "Los valores que configure en esta pantalla son muy dependientes de la base de datos. Le sugerimos fuertemente trabajar con un motor de bases de datos PostgreSQL - No podemos garantizar que los valores que aquí presentamos funcionen con otro tipo de base de datos."
+
+#: app/views/sys_conf_adm/edit_table_field.html.erb:7
+msgid "Go back to the table definition"
+msgstr "Volver a la definición de la tabla"
+
+#: app/views/sys_conf_adm/edit_table_field.html.erb:13
+msgid "Data type"
+msgstr "Tipo de datos"
+
+#: app/views/sys_conf_adm/edit_table_field.html.erb:19
+msgid "If you specify a default value, it should be valid for its data type. Note that the default value you specify here is trusted to be sane - you can, of course, give illegal or dangerous values here. After all, you _are_ an administrator! With great power comes great responsability."
+msgstr "Si especifica un valor por omisión, debe ser válido para su tipo de datos. Tome en cuenta que confiamos en la sanidad del valor que especifique aquí - Usted puede, claro está, especificar valores ilegales o peligrosos. A fin de cuentas, ¡_es_ un administrador! Con un gran poder viene una gran responsabilidad."
+
+#: app/views/sys_conf_adm/edit_table_field.html.erb:32
+msgid "Keep in mind that, in order for the database to allow you to require no null values to be entered in a given field, they should all have a value set (this means, older records are not allowed to break the rules).<br/>If you set a nonempty default value, we will set all the NULL values to it, and you will be able to set it to NOT NULL."
+msgstr "Recuerde que, para que la base de datos le permita requerir el que en un campo determinado no sean permitidos los valores nulos, todos los registros existentes deben tener un valor (esto significa, los registros viejos no pueden romper las reglas).<br/>Si usted configura un valor por omisión, modificaremos todos los registros especificando este valor, y usted podrá especificar que no sean permitidos los nulos."
+
+#: app/views/sys_conf_adm/edit_table_field.html.erb:47
+msgid "Modify"
+msgstr "Modificar"
 
 #: app/views/sys_conf_adm/edit.html.erb:1
 msgid "Editing configuration entry <em>%s</em>"
